# manga-dl

./: .gitignore  env.example  main.py  pyproject.toml  requirements.txt
app/: fetcher.py  scraper.py
config/: config.py
modules/utils/: __init__.py  logger.py  retry.py  zipdir.py
modules/worker/: __init__.py  consumer.py  producer.py
provider/: async_generator.py  mangafun.py  readm.py
providers/: common.py  mangakakalot.py  readm.py
settings/: config.py
